# Ssemafor-FformationDetection

./: Dockerfile  LICENSE  README.md  docker-compose.yml  f_formation_detector.py  groupingimg.py  package.xml  pose_extractor.py  requirements.txt  setup.cfg  setup.py
f_formation_detection/: __init__.py  f_formation_detector.py  groupingimg.py  pose_extractor.py
launch/: all_nodes_launch.py  formation_detector_launch.py  pose_localizer_launch.py
