<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f_formation_detection</name>
  <version>0.0.1</version>
  <description>F-formation detection using YOLO and MediaPipe for social robot applications</description>
  
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/yourusername/f-formation-detection</url>
  <url type="repository">https://github.com/yourusername/f-formation-detection</url>

  <author email="author@example.com">Author Name</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>python3-opencv</depend>
  <depend>python3-mediapipe</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
